Revision history for Net-XMPP2

0.13
         - added a default handler to L<Net::XMPP2::Parser> which
           recognizes and stores CDATA now correctly, so that it can
           be retrieved from the nodes structure by the C<as_string> method
           of L<Net::XMPP2::Node> correctly.

0.12 Fri Apr 11 16:30:40 CEST 2008
         - API CHANGE: The C<connect> method of L<Net::XMPP2::SimpleConnection>
           and thus L<Net::XMPP2::Connection> is now non-blocking!
           IMPORTANT: Please revisit your connection code and adjust accordingly!
         - improved the documentation w.r.t. event callback arguments a bit
         - improved the documentation of the send_iq method of Net::XMPP2::Connection
         - added samples/display_my_avatar
         - added support for XEP-0054 (vCard) and added a test for it (z_07_vcard.t)
         - replaced the big and unmaintainable MUC test by some smaller
           tests.
         - fixed a bug with disconnect event propagation by Net::XMPP2::Client
         - added a connect_timeout argument to Net::XMPP2::Connection and
           added an interface for setting it to ::SimpleConnection.
         - fixed a serious bug in the split_jid regex, and added a test for
           split_jid
         - fixed a few connection error bugs in Net::XMPP2::Client and the
           SimpleConnection class.

0.11 Fri Mar 21 03:00:58 CET 2008
         - tweaked tests a bit
         - and added use strict to some modules
         - fixed a small oversight in Ext::Version w.r.t. to 'use strict'
         - added the pod-coverage test
         - added some more MUC functions (Net::XMPP2::Ext::MUC::Room::get_users)
         - added nickcollision callback
         - fixed some errors in the documentation
         - added a xmpp_datetime_as_timestamp utility function
         - fixed a minor documentation bug in Net::XMPP2::Client
         - removed the init method from the public interface and made