@@ -14,6 +14,7 @@ t/parser_test.t
 t/z_00_register.t
 t/z_01_message.t
 t/z_01_message_tracking.t
+t/z_01_message_block.t
 t/z_02_disco.t
 t/z_03_iq_auth.t
 t/z_04_presence.t
