@@ -1,13 +1,12 @@
 #!/opt/perl/bin/perl
 use strict;
 use utf8;
-use Coro;
 use AnyEvent;
 use Net::XMPP2::Client;
 
 my $j = AnyEvent->condvar;
 my $cl = Net::XMPP2::Client->new (debug => 1);
-$cl->add_account ('net_xmpp2@jabber.org', 'test', undef, undef, { wait_for_empty_buffer => 1 });
+$cl->add_account ('net_xmpp2@jabber.org', 'test');
 $cl->reg_cb (
    session_ready => sub {
       my ($cl, $acc) = @_;
@@ -15,7 +14,6 @@ $cl->reg_cb (
       $cl->send_message (
          "Hi! I'm too lazy to adjust examples!" => 'elmex@jabber.org', undef, 'chat'
       );
-      warn "TEST\n";
    },
    disconnect => sub {
       my ($cl, $acc, $h, $p, $reas) = @_;
