@@ -1,6 +1,10 @@
 Revision history for Net-XMPP2
 
 0.13
+         - added a 'send_buffer_empty' event, to be able to wait
+           for an empty send buffer. and also the C<drain> method, which
+           will block until the send buffer is empty. also added a C<blocking_write>
+           option for L<Net::XMPP2::Connection>.
          - added a default handler to L<Net::XMPP2::Parser> which
            recognizes and stores CDATA now correctly, so that it can
            be retrieved from the nodes structure by the C<as_string> method
